--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
    <h1>Europe Destinations</h1>
    <img src="/assets/europe-map.png" alt="">
+   <img src="/assets/europe-flags.png" alt="">
 </body>
 </html>
