Add <p>Great site by Julia

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
    <h1>Europe Destinations</h1>
    <img src="/assets/europe-map.png" alt="">
    <img src="/assets/europe-flags.png" alt="">
+   <p>This is a pretty awesome site by Julia</p>
 </body>
 </html>
